fixed some functions

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="col-6 d-flex flex-row justify-content-center my-1">
           <button class="col-4 text-center text-white bg-secondary" onclick="numOperations('0')">0</button>
           <button class="col-4 text-center text-white bg-secondary" onclick="numOperations('.')">.</button>
-          <button class="col-4 text-center text-white bg-secondary" onclick="numOperations('*0.01')">%</button>
+          <button class="col-4 text-center text-white bg-secondary" onclick="percent()">%</button>
         </div>
       </div>
       <div class="row justify-content-center">
